--- a/.npmignore
+++ b/.npmignore
@@ -239,3 +239,7 @@ scripts/
 demo-app.component.js
 index.android.js
 index.ios.js
+# ignore the .ts files
+*.ts
+# include the .d.ts files
+!*.d.ts
